TFP-5702 tar i bruk dekningsgrad fra behandling